# SLAE_

./: CMakeLists.txt  README.md
Solve/: solve.hpp
Tests/: CMakeLists.txt  CSR_tests.cpp  Dense_matrix_tests.cpp  Householder.cpp  Iteration_methods_tests.cpp  KR.cpp  Tridiagonal_tests.cpp  iterations.cpp  tests.cpp
Tests/KR/: Chebyshev_r(n).txt  KR.cpp  time.txt
Tridiag_matrix/: Tridiagonal_matrix.cpp  Tridiagonal_matrix.h
src/: CMakeLists.txt  CSR_matrix.hpp  Dense_matrix.hpp  Householder.hpp  Tridiagonal_matrix.h  Tridiagonal_matrix.hpp  simple_iteration.hpp  solve.hpp
src/iteration_methods/: Conjugate_gradient.hpp  Conjugate_gradient.txt  Gradient_descent.hpp  Gradient_descent.txt  Jacobi.hpp  Jacobi.txt  MPI.hpp  MPI.txt  MPI_chebyshev.hpp  MPI_chebyshev.txt  SOR.hpp  SOR.txt  SSOR.hpp  SSOR.txt  SSOR_chebyshev.txt  Yakobi.hpp  Yakobi.txt  fixed_point.txt  fixed_point_iteration.hpp  fixed_point_tau.txt  gauss_seidel.hpp  gauss_seidel.txt
